--- a/.github/workflows/ci-lint.yml
+++ b/.github/workflows/ci-lint.yml
@@ -36,15 +36,15 @@ jobs:
       working-directory: ../p4c
 
     - name: Run cpplint on C/C++ files.
-      run: make cpplint
+      run: cmake --build . --target cpplint
       working-directory: ../p4c/build
 
     - name: Run clang-format on C/C++ files.
-      run: make clang-format
+      run: cmake --build . --target clang-format
       working-directory: ../p4c/build
 
     - name: Run black and isort on Python files.
       run: |
-        make black
-        make isort
+        cmake --build . --target black
+        cmake --build . --target isort
       working-directory: ../p4c/build
