--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -8,7 +8,7 @@ on:
 
 # Cancel any preceding run on the pull request.
 concurrency:
-  group: test-flay-${{ github.event.pull_request.number || github.ref }}
+  group: test-flay-m1-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: ${{ github.ref != 'refs/heads/master' }}
 
 jobs:
@@ -41,10 +41,6 @@ jobs:
         run: |
           git clone --recurse-submodules -b fruffy/flay -j2 https://github.com/fruffy/p4c/ $GITHUB_WORKSPACE/../p4c
           ln -sf $GITHUB_WORKSPACE $GITHUB_WORKSPACE/../p4c/backends/p4tools/modules/
-
-      - name: Install gRPC deps
-        if: ${{ matrix.use_grpc == 'ON' }}
-        run: sudo apt-get install libc-ares-dev libre2-dev # Needed for gRPC.
 
       - name: Build (Ubuntu 22.04)
         run: |
