--- a/service/CMakeLists.txt
+++ b/service/CMakeLists.txt
@@ -2,20 +2,22 @@
 set(CMAKE_POSITION_INDEPENDENT_CODE_PREV ${CMAKE_POSITION_INDEPENDENT_CODE_PREV})
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
-set(P4RUNTIME_GRPC_GEN_SRCS ${P4RUNTIME_DIR}/p4runtime.grpc.pb.cc)
-set(P4RUNTIME_GRPC_GEN_HDRS ${P4RUNTIME_DIR}/p4runtime.grpc.pb.h)
-# Source files for Flay gRPC server.
-add_custom_command(
-  OUTPUT ${P4RUNTIME_GRPC_GEN_SRCS} ${P4RUNTIME_GRPC_GEN_HDRS}
-  COMMAND ${Protobuf_PROTOC_EXECUTABLE} -I${P4RUNTIME_STD_DIR} -I${P4C_SOURCE_DIR}/control-plane
-          --proto_path ${Protobuf_INCLUDE_DIR} --grpc_out ${P4C_BINARY_DIR}/control-plane
-          --plugin=protoc-gen-grpc=${GRPC_CPP_PLUGIN_EXECUTABLE} ${P4RUNTIME_RT_PROTO}
-  DEPENDS ${P4RUNTIME_RT_PROTO} controlplane grpc_cpp_plugin protoc
-  COMMENT "Generating Flay gRPC server."
-)
-set(FLAY_GRPC_SOURCES ${P4RUNTIME_GRPC_GEN_SRCS} flay_grpc_service.cpp)
-add_library(flay_grpc STATIC ${FLAY_GRPC_SOURCES})
+add_library(flay_grpc OBJECT ${P4RUNTIME_RT_PROTO})
 target_link_libraries(flay_grpc PUBLIC grpc++ PRIVATE controlplane PRIVATE flay_runtime)
+
+protobuf_generate(
+  TARGET flay_grpc
+  LANGUAGE grpc
+  IMPORT_DIRS ${P4RUNTIME_STD_DIR} ${FLAY_P4RUNTIME_DIR} ${Protobuf_INCLUDE_DIRS} ${P4C_SOURCE_DIR}/control-plane
+  PROTOC_OUT_DIR ${CMAKE_BINARY_DIR}/control-plane
+  OUT_VAR FLAY_GRPC_P4RUNTIME_GEN_SRCS
+  DEPENDS ${P4RUNTIME_RT_PROTO}
+  PLUGIN protoc-gen-grpc=$<TARGET_FILE:grpc_cpp_plugin>
+  GENERATE_EXTENSIONS .grpc.pb.h .grpc.pb.cc
+)
+
+add_library(flay_grpc_service STATIC flay_grpc_service.cpp)
+target_link_libraries(flay_grpc_service PRIVATE grpc++ PRIVATE controlplane)
 
 # ##################################################################################################
 # Flay Service Client #
@@ -32,6 +34,8 @@ set(FLAY_GRPC_CLIENT_LIBS
     controlplane
     PRIVATE
     grpc++
+    PRIVATE
+    flay_grpc
 )
 if(HAVE_LIBBACKTRACE)
   set(FLAY_GRPC_CLIENT_LIBS "${FLAY_GRPC_CLIENT_LIBS};-lbacktrace")
