Implement a pass to simplify collapse data plane variables.

--- a/.github/workflows/ci-test-m1.yml
+++ b/.github/workflows/ci-test-m1.yml
@@ -18,6 +18,7 @@ jobs:
     runs-on: macos-14
     env:
       CTEST_PARALLEL_LEVEL: 4
+      CMAKE_UNITY_BUILD: ON
     steps:
       - uses: actions/checkout@v3
         with:
